Overflow corrected

--- a/style.css
+++ b/style.css
@@ -3,6 +3,13 @@
     padding: 0;
     box-sizing: border-box;
     font-family: var(--font-v);
+
+}
+
+html,body{
+    margin:0;
+    padding: 0;
+    overflow-x: hidden;
 }
 
 
